<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/email_edt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/bg_input_fields"
            android:hint="@string/email_label"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:maxLines="1"
            android:padding="@dimen/_6sdp"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password_edt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/bg_input_fields"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLines="1"
            android:padding="@dimen/_6sdp"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/create_account_btn"
            android:layout_width="180dp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_35sdp"
            android:background="@drawable/bg_input_fields"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:text="@string/login_label"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>