<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.auth.AuthActivity">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/logo"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_margin="@dimen/_32sdp"
                android:src="@drawable/logo"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/profile_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16sdp"
                android:text="@string/join_us_label"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/options_layout"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintBottom_toTopOf="@id/register_frame"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_label">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/register_btn"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_33sdp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:text="@string/register_label"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11ssp"
                    app:cardElevation="3dp"
                    app:cardUseCompatPadding="true" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_btn"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_33sdp"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:maxLines="1"
                    android:padding="0dp"
                    android:text="@string/login_label"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11ssp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <FrameLayout
                android:id="@+id/register_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/options_layout" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>