<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.batool.codechallenge.app.ui.main.dashboard.DashboardViewModel" />
    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_16sdp"
                android:text="@string/most_viewed_articles"
                android:textColor="@color/black"
                android:textSize="@dimen/_17ssp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/sort_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_2sdp"
                        android:text="@string/sort"
                        android:textColor="@color/black" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_2sdp"
                        android:src="@drawable/ic_sort"
                        app:tint="@color/black" />

                </androidx.appcompat.widget.LinearLayoutCompat>
            </RelativeLayout>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_6sdp"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_4sdp"
                app:cardElevation="4dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="horizontal"
                    android:padding="@dimen/_4sdp">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/search_edt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_4sdp"
                        android:layout_weight="@integer/material_motion_duration_long_1"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/ic_search"
                        android:drawablePadding="@dimen/_8sdp"
                        android:hint="@string/search"
                        android:imeOptions="actionDone"
                        android:inputType="textNoSuggestions"
                        android:lines="1"
                        android:paddingStart="@dimen/_5sdp"
                        android:paddingTop="@dimen/_4sdp"
                        android:paddingBottom="@dimen/_4sdp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        app:drawableTint="@color/gray" />

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/clear_search_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_4sdp"
                        android:layout_marginEnd="@dimen/_4sdp"
                        android:background="?selectableItemBackgroundBorderless"
                        android:src="@drawable/ic_close"
                        android:tint="@color/gray" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/tabs_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_tab" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/no_sections_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/no_sections_label"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13ssp"
                    android:visibility="invisible" />

            </RelativeLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_40sdp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>